
	- Fixed several bugs concerning indicators and added error messages
	  instead of segfaults.

Thu Dec 20 14:15:56 CET 2001

	- Removed space_or_nl and line_end from pgc.l.

Sun Dec 23 13:08:36 CET 2001

	- Fixed several bugs concerning arrays of structs including a memory
	  allocation bug.

Mon Jan  7 12:18:01 CET 2002

	- Fixed parser to accept initializing expressions starting with "(".

Tue Jan  8 15:16:37 CET 2002

	- Fixed array pointers, no longer using void *.

Thu Jan 10 11:12:14 CET 2002

	- Include sqlca.h automatically.

Fri Jan 11 15:43:39 CET 2002

	- clear sqlca on : [de]allocate descriptor  & get descriptor and set
	  sqlca.sqlerrd[2] accordingly (Christof).

Sat Jan 12 22:04:02 CET 2002

	- Fixed variable handling for struct members.
	- Removed check for array input. An attribut might store the
	  complete array.

Fri Jan 18 16:49:02 CET 2002

	- Accept subsequent commits.

Wed Jan 23 17:35:23 CET 2002

	- Added patch to temporarily disable locale for descriptors too (Christof).
	- Set ecpg version to 2.9.0.
        - Set library version to 3.3.0.

Wed Mar  6 10:40:28 CET 2002

	- Synced preproc.y with gram.y.

Sun Mar 10 13:08:22 CET 2002

	- Fixed two bugs in define command in lexer.

Thu Mar 21 08:25:08 CET 2002

	- Applied patch by Nicolas Bazin <nbazin@ingenico.com.au> for improved
	  typedef handling.
	- Added option '-c' to automatically create C typedef from SQL one.

Sun Apr 14 10:53:14 CEST 2002

	- Fixed one bug in structure handling resulting in using sizeof
	  indicator instead of variable.
	- Synced preproc.y with gram.y.

Mon Apr 22 20:44:56 CEST 2002
	
	- Synced preproc.y with gram.y.
	- Synced keywords.c.

Sun Apr 28 19:16:40 CEST 2002

	- Synced preproc.y with gram.y.
	- Fixed typo in comment printed by ecpg.

Sun May 19 19:21:34 CEST 2002

	- Fixed reduce/reduce conflict in parser.
	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keywords.c.
	- Set ecpg version to 2.10.0.
	- Set library version to 3.4.0.
