@@ -1254,6 +1254,12 @@ Sun May 19 19:21:34 CEST 2002
 	- Synced preproc.y with gram.y.
 	- Synced pgc.l with scan.l.
 	- Synced keywords.c.
+
+Mon May 20 10:58:36 CEST 2002
+
+	- Fixed some parser bugs.
+	- Removed some simple rules to work arounf bison limit for now.
+	- Update c_keywords.c to reflect changes in keywords.c.
 	- Set ecpg version to 2.10.0.
 	- Set library version to 3.4.0.
 
